samples/_failures_safe/1761429170_7fa657_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e0bbb416.c: In function ‘main’:
./samples/SAFE/__tmp_e0bbb416.c:161:29: error: expected ‘)’ at end of input
  161 |     if (multiply_matrices(&a
      |                          ~  ^
      |                             )
./samples/SAFE/__tmp_e0bbb416.c:161:9: error: too few arguments to function ‘multiply_matrices’
  161 |     if (multiply_matrices(&a
      |         ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e0bbb416.c:75:5: note: declared here
   75 | int multiply_matrices(const Matrix *a, const Matrix *b, Matrix *result) {
      |     ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e0bbb416.c:161:5: error: expected declaration or statement at end of input
  161 |     if (multiply_matrices(&a
      |     ^~
